# synth

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  index.html  sonar-project.properties
.github/workflows/: perf.yml  quality.yml  sonarcloud.yml
design/: README.md  TASKS.md  ZandersWave_prototype.html
design/source/: ZandersWave.dc.html
dev/bench/: data.js
src/: Parameters.cpp  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h
src/dsp/: Arpeggiator.cpp  Arpeggiator.h  BasicSources.h  Envelope.h  FastMath.h  Lfo.h  ModMatrix.cpp  ModMatrix.h  MultimodeFilter.h  ParamRefs.cpp  ParamRefs.h  RtSafety.h  Voice.cpp  Voice.h  Wavetable.cpp  Wavetable.h  WavetableLibrary.cpp  WavetableLibrary.h  WavetableOscillator.h  ZWSynthesiser.h
src/dsp/fx/: Effects.h  FxChain.cpp  FxChain.h
src/ui/: Displays.h  FxRackPanel.h  ModMatrixPanel.h  PresetBrowser.h  Theme.h  ZWLookAndFeel.cpp  ZWLookAndFeel.h
tests/: perf_bench.cpp  render_smoke.cpp  rt_check.cpp  rtsan_suppressions.txt  ui_snapshot.cpp
tests/unit/: ArpeggiatorTests.cpp  BasicSourcesTests.cpp  EnvelopeTests.cpp  FxChainTests.cpp  LfoTests.cpp  ModMatrixTests.cpp  MultimodeFilterTests.cpp  ParametersTests.cpp  PresetManagerTests.cpp  TestHelpers.h  TestMain.cpp  VoiceModeTests.cpp  VoiceTests.cpp  WavetableLibraryTests.cpp  WavetableOscillatorTests.cpp  WavetableTests.cpp
tools/: cobertura_to_sonar.py
